@@ -1,6 +1,7 @@
 * 1.4       Aug 2009
     - add touchiness: block repeated abusers for longer
     - add blacklisting: store frequent abusers for permanent blocking
+    - add support for IPv6 in whitelisting (experimental)
     - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
     - debug mode now enabled with SSHGUARD_DEBUG environment variable (no "-d")
     - support non-POSIX libCs that require getopt.h (thanks Nobuhiro Iwamatsu)
